--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "vue-html-loader": "^1.2.0",
     "vue-loader": "^8.5.2",
     "vue-router": "^0.7.11",
+    "vue-resource": "^0.1.17",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.4.0",
